--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,26 +1,28 @@
 name: $(Date:yyyyMMdd)$(Rev:.rr)
 
-resources:
-  repositories:
-    - repository: templates
-      type: github
-      endpoint: DigitalInnovation
-      name: DigitalInnovation/dta-ds-platform-scripts
-      ref: debug_ci_trigger
+# resources:
+#   repositories:
+#     - repository: templates
+#       type: github
+#       endpoint: DigitalInnovation
+#       name: DigitalInnovation/dta-ds-platform-scripts
+#       ref: debug_ci_trigger
       
-# pr:
-#   - main
+pr:
+  - main
+  - dev
 
 # trigger: none
 
-# trigger:
-#   batch: true
-#   branches:
-#     include:
-#       - main
-#       # - develop
-#       # - feature/*
-#       # - hotfix/*
+trigger:
+  # batch: true
+  branches:
+    include:
+      - main
+      - dev
+      # - develop
+      # - feature/*
+      # - hotfix/*
 
 pool: # linux_lab
   vmImage: "ubuntu-latest"
